{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 174,
  "lineage": "5db5d514-16c9-d87f-1a6f-881e45dbe304",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "data",
      "type": "azurerm_firewall_policy",
      "name": "firewallpolicy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub_firewall",
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "firewalls": [],
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "location": "westus",
            "name": "firewall-policy",
            "resource_group_name": "HS-anjali1",
            "rule_collection_groups": [
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/firewall-rule"
            ],
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "firewall_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub_firewall",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/publicIPAddresses/firewall-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.238.31.135",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "firewall-pip",
            "resource_group_name": "HS-anjali1",
            "sku": "Standard"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "firewallmgmt_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub_firewall",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/publicIPAddresses/firewallmgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.61.19.28",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "firewallmgmt-pip",
            "resource_group_name": "HS-anjali1",
            "sku": "Standard"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "firewallmgmt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub_firewall",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.29.0/26",
            "address_prefixes": [
              "10.0.29.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HS-anjali1",
            "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "virtual_network_name": "Hub-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub_firewall",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.26.0/26",
            "address_prefixes": [
              "10.0.26.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HS-anjali1",
            "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "virtual_network_name": "Hub-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.firewallpolicy",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "policy1",
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "westus",
            "name": "firewall-policy",
            "private_ip_ranges": null,
            "resource_group_name": "HS-anjali1",
            "rule_collection_groups": [],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "firewall-policy",
            "resource_group_name": "HS-anjali1",
            "subscription_id": "80a4f419-f341-4500-b253-3fbc8b7b9ea4"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.firewallrule",
      "mode": "data",
      "type": "azurerm_firewall_policy",
      "name": "firewallpolicy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "firewalls": [],
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "location": "westus",
            "name": "firewall-policy",
            "resource_group_name": "HS-anjali1",
            "rule_collection_groups": [
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/firewall-rule"
            ],
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.firewallrule",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "firewallrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/firewall-rule",
            "name": "firewall-rule",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "nat_rule_collection1",
                "priority": 800,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [
                      "10.233.0.0/16"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "*"
                    ],
                    "name": "spoke1-to-spoke2",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "10.11.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "description": "",
                    "destination_addresses": [
                      "10.11.0.0/16"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "*"
                    ],
                    "name": "spoke2-to-spoke1",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "10.233.0.0/16"
                    ],
                    "source_ip_groups": null
                  }
                ]
              }
            ],
            "priority": 500,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.firewallpolicy.azurerm_firewall_policy.policy",
            "module.firewallrule.data.azurerm_firewall_policy.firewallpolicy",
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "spoke1_nsg",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.11.0.0/24",
            "address_prefixes": [
              "10.11.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HS-anjali1",
            "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "virtual_network_name": "spoke1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "spoke2_nsg",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.233.0.0/24",
            "address_prefixes": [
              "10.233.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HS-anjali1",
            "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "virtual_network_name": "spoke2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "spoke1_nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "westus",
            "name": "nsg1",
            "resource_group_name": "HS-anjali1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow inbound HTTP traffic",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg1",
            "resource_group_name": "HS-anjali1",
            "subscription_id": "80a4f419-f341-4500-b253-3fbc8b7b9ea4"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.routingtable.azurerm_route_table.rt",
            "module.vnet.azurerm_virtual_network.virtual_network",
            "module.vnet.data.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "spoke2_nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "location": "westus",
            "name": "nsg2",
            "resource_group_name": "HS-anjali1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow inbound HTTP traffic",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg2",
            "resource_group_name": "HS-anjali1",
            "subscription_id": "80a4f419-f341-4500-b253-3fbc8b7b9ea4"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.routingtable.azurerm_route_table.rt",
            "module.vnet.azurerm_virtual_network.virtual_network",
            "module.vnet.data.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "spoke1_nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1",
            "network_security_group_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "subnet_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg.data.azurerm_subnet.subnet_id",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.routingtable.azurerm_route_table.rt",
            "module.vnet.azurerm_virtual_network.virtual_network",
            "module.vnet.data.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "spoke2_nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2",
            "network_security_group_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "subnet_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg.data.azurerm_subnet.subnet_id",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.routingtable.azurerm_route_table.rt",
            "module.vnet.azurerm_virtual_network.virtual_network",
            "module.vnet.data.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pip2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/publicIPAddresses/firewall-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.238.31.135",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "firewall-pip",
            "resource_group_name": "HS-anjali1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "pip3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/publicIPAddresses/firewallmgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.61.19.28",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "firewallmgmt-pip",
            "resource_group_name": "HS-anjali1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "vm1_pip",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/publicIPAddresses/vm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.245.193.244",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "vm-pip",
            "resource_group_name": "HS-anjali1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.routingtable",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rt1",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": false,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "location": "westus",
            "name": "Hub-RoutingTable",
            "resource_group_name": "HS-anjali1",
            "route": [
              {
                "address_prefix": "10.11.0.0/16",
                "name": "to-spoke1",
                "next_hop_in_ip_address": "10.0.26.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.233.0.0/16",
                "name": "to-spoke2",
                "next_hop_in_ip_address": "10.0.26.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallManagementSubnet",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallSubnet",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Hub-RoutingTable",
            "resource_group_name": "HS-anjali1",
            "subscription_id": "80a4f419-f341-4500-b253-3fbc8b7b9ea4"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vmip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "spoke1_vm",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/publicIPAddresses/vm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.245.193.244",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "vm-pip",
            "resource_group_name": "HS-anjali1",
            "sku": "Standard"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnetids",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "spoke1_vm",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.11.0.0/24",
            "address_prefixes": [
              "10.11.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HS-anjali1",
            "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "virtual_network_name": "spoke1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "spoke2_vm",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.233.0.0/24",
            "address_prefixes": [
              "10.233.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HS-anjali1",
            "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "virtual_network_name": "spoke2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "spoke1_vm",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/networkInterfaces/front-nic",
            "internal_domain_name_suffix": "5f0t4pwobwaerbcesgwdc1dl3c.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.11.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/publicIPAddresses/vm-pip",
                "subnet_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "00-0D-3A-31-19-BE",
            "name": "front-nic",
            "private_ip_address": "10.11.0.4",
            "private_ip_addresses": [
              "10.11.0.4"
            ],
            "resource_group_name": "HS-anjali1",
            "virtual_machine_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Compute/virtualMachines/frontend-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "front-nic",
            "resource_group_name": "HS-anjali1",
            "subscription_id": "80a4f419-f341-4500-b253-3fbc8b7b9ea4"
          },
          "dependencies": [
            "module.public_ip.azurerm_public_ip.public_ip",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.routingtable.azurerm_route_table.rt",
            "module.vm.data.azurerm_public_ip.vmip",
            "module.vm.data.azurerm_subnet.subnetids",
            "module.vnet.azurerm_virtual_network.virtual_network",
            "module.vnet.data.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "spoke2_vm",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/networkInterfaces/back-nic",
            "internal_domain_name_suffix": "w2vjpte2afeu3kj0xkyf2zrjrf.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.233.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "60-45-BD-08-5C-27",
            "name": "back-nic",
            "private_ip_address": "10.233.0.4",
            "private_ip_addresses": [
              "10.233.0.4"
            ],
            "resource_group_name": "HS-anjali1",
            "virtual_machine_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Compute/virtualMachines/backend-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "back-nic",
            "resource_group_name": "HS-anjali1",
            "subscription_id": "80a4f419-f341-4500-b253-3fbc8b7b9ea4"
          },
          "dependencies": [
            "module.public_ip.azurerm_public_ip.public_ip",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.routingtable.azurerm_route_table.rt",
            "module.vm.data.azurerm_public_ip.vmip",
            "module.vm.data.azurerm_subnet.subnetids",
            "module.vnet.azurerm_virtual_network.virtual_network",
            "module.vnet.data.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "data",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub_vnet1",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": false,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "location": "westus",
            "name": "Hub-RoutingTable",
            "resource_group_name": "HS-anjali1",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "FirewallDefaultRoute",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallManagementSubnet",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallSubnet",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        },
        {
          "index_key": "spoke_vnet1",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": false,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "location": "westus",
            "name": "Hub-RoutingTable",
            "resource_group_name": "HS-anjali1",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "FirewallDefaultRoute",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallManagementSubnet",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallSubnet",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        },
        {
          "index_key": "spoke_vnet2",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": false,
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable",
            "location": "westus",
            "name": "Hub-RoutingTable",
            "resource_group_name": "HS-anjali1",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "FirewallDefaultRoute",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallManagementSubnet",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallSubnet",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1",
              "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub_vnet1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ccc530e6-3584-43dd-8db0-00c0e9cc29d2",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet",
            "location": "westus",
            "name": "Hub-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "HS-anjali1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.26.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable"
              },
              {
                "address_prefixes": [
                  "10.0.29.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallManagementSubnet",
                "name": "AzureFirewallManagementSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "Hub-vnet",
            "resource_group_name": "HS-anjali1",
            "subscription_id": "80a4f419-f341-4500-b253-3fbc8b7b9ea4"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.routingtable.azurerm_route_table.rt",
            "module.vnet.data.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "spoke_vnet1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.11.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3e3f75f9-0dce-4880-8444-91ac316c6bea",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1",
            "location": "westus",
            "name": "spoke1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "HS-anjali1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.11.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke1/subnets/subnet1",
                "name": "subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spoke1",
            "resource_group_name": "HS-anjali1",
            "subscription_id": "80a4f419-f341-4500-b253-3fbc8b7b9ea4"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.routingtable.azurerm_route_table.rt",
            "module.vnet.data.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "spoke_vnet2",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.233.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cc972ab7-019c-4e49-a93a-bab05e66298d",
            "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2",
            "location": "westus",
            "name": "spoke2",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "HS-anjali1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.233.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/virtualNetworks/spoke2/subnets/subnet2",
                "name": "subnet2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/80a4f419-f341-4500-b253-3fbc8b7b9ea4/resourceGroups/HS-anjali1/providers/Microsoft.Network/routeTables/Hub-RoutingTable"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spoke2",
            "resource_group_name": "HS-anjali1",
            "subscription_id": "80a4f419-f341-4500-b253-3fbc8b7b9ea4"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.routingtable.azurerm_route_table.rt",
            "module.vnet.data.azurerm_route_table.rt"
          ]
        }
      ]
    }
  ]
}